# cpp-Cache

./: CMakeLists.txt  README.md
.cache/clangd/index/: ArcCache.h.50F84E6131E50CE3.idx  ArcLfuPart.h.A5617F53CC4952CA.idx  ArcLruPart.h.B1DDF79FAFE3EFBA.idx  ArcNode.h.A41EA79A51275DD3.idx  ICachePolicy.h.27F768C263A0D824.idx  LfuCache.h.6F0C1D0A7A2049B8.idx  LruCache.h.ABAD7CB89CC9ECD5.idx  lfu.test.cpp.4322E987FA24D533.idx  lru.test.cpp.4CB66F5F9D998250.idx  testAllCachePolicy.cpp.302BBF5E1FC4BE9B.idx
include/: ICachePolicy.h  LfuCache.h  LruCache.h
include/arc/: ArcCache.h  ArcLfuPart.h  ArcLruPart.h  ArcNode.h
tests/: lru.test.cpp  testAllCachePolicy.cpp
